[tool.poetry]
name = "repl_python3_TSP-Framework"
version = "0.1.0"
description = ""
authors = ["Javernaver <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
beautifultable = "^1.0.1"
prettytable = "^2.4.0"
matplotlib = "^3.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
